fix: move css on body to content class that is new class wrapping all contents #12

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,9 @@
     --btn-hover-color: #0BA600;
 }
 
-body {
+.content {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
